[package]
name = "pid-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
egui-macroquad = "0.15.0"
macroquad = "0.3.25"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*